# sv-shell

./: LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml
examples/: counter.v  counter_shell.sv
src/sv_shell/: __init__.py  cli.py  generator.py
tests/: test_generator.py
